# Search_for_optimal_solution_using_swarm_algorithms

./: .gitignore  README.md  pyproject.toml
src/search_for_optimal_solution_using_swarm_algorithms/: camera.py  camera_real.py  camera_recording_rtsp.py  camera_sim.py  custom_pioneer.py  detect_only.py  flight_mission_runner.py  flight_utils.py  main.py  main_detection.py  main_flight.py  main_old.py  main_old_with_moving_cows.py  main_sim.py  manual_camera_recording_rtsp.py  object_detection_controller.py  object_detection_controller_draft.py  object_detection_controller_draft_old.py  object_detection_controller_hybrid.py  object_detection_controller_sim.py  pioneer_main.py  pioneer_main_sim.py  test_pion.py  yolo_detector.py  yolov8n.pt
tests/: test_lokky.py
