[project]
name = "search-for-optimal-solution-using-swarm-algorithms"
version = "0.1.0"
description = ""
authors = [
    {name = "ghamlet",email = "dmtr317744@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "search_for_optimal_solution_using_swarm_algorithms", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
