[tool.poetry]
name = "search-for-optimal-solution-using-swarm-algorithms"
version = "0.1.0"
description = ""
authors = ["ghamlet <dmtr317744@gmail.com>"]
readme = "README.md"
packages = [
    { include = "search_for_optimal_solution_using_swarm_algorithms", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10"
pionsdk = "0.0.11"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"